--- a/tensorboard/plugins/convert/tf_convert_info/tf-convert-node-info.html
+++ b/tensorboard/plugins/convert/tf_convert_info/tf-convert-node-info.html
@@ -458,23 +458,23 @@ limitations under the License.
           return stats ? stats.getTotalMicros() : 0;
         },
         _getHasDisplayableNodeStats: function(stats) {
-          return tf.graph.util.hasDisplayableNodeStats(stats);
+          return tf.convert.util.hasDisplayableNodeStats(stats);
         },
         _getNodeStatsFormattedBytes: function(stats) {
           if (!stats || !stats.totalBytes) {
             return;
           }
 
-          return tf.graph.util.convertUnitsToHumanReadable(
-              stats.totalBytes, tf.graph.util.MEMORY_UNITS);
+          return tf.convert.util.convertUnitsToHumanReadable(
+              stats.totalBytes, tf.convert.util.MEMORY_UNITS);
         },
         _getNodeStatsFormattedComputeTime: function(stats) {
           if (!stats || !stats.getTotalMicros()) {
             return;
           }
 
-          return tf.graph.util.convertUnitsToHumanReadable(
-              stats.getTotalMicros(), tf.graph.util.TIME_UNITS);
+          return tf.convert.util.convertUnitsToHumanReadable(
+              stats.getTotalMicros(), tf.convert.util.TIME_UNITS);
         },
         _getNodeStatsFormattedOutputSizes: function(stats) {
           if (!stats || !stats.outputSize || !stats.outputSize.length) {
@@ -505,7 +505,7 @@ limitations under the License.
           _.each(node.attr, function(entry) {
             // Unpack the "too large" attributes into separate attributes
             // in the info card, with values "too large to show".
-            if (entry.key === tf.graph.LARGE_ATTRS_KEY) {
+            if (entry.key === tf.convert.LARGE_ATTRS_KEY) {
               attrs = attrs.concat(entry.value.list.s.map(function(key) {
                 return {key: key, value: "Too large to show..."};
               }));
@@ -539,7 +539,7 @@ limitations under the License.
         },
         _getFunctionUsages(node, hierarchy) {
           this._refreshNodeItemList("functionUsagesList");
-          if (!node || node.type !== tf.graph.NodeType.META) {
+          if (!node || node.type !== tf.convert.NodeType.META) {
             // Functions must be represented by metanodes.
             return [];
           }
@@ -571,7 +571,7 @@ limitations under the License.
               return {
                 name: name,
                 node: this._getNode(name, this.graphHierarchy),
-                edgeLabel: tf.graph.scene.edge.getLabelForBaseEdge(baseEdge,
+                edgeLabel: tf.convert.scene.edge.getLabelForBaseEdge(baseEdge,
                     this.renderHierarchy),
                 renderInfo: this._getRenderInfo(name, this.renderHierarchy)
               };
@@ -594,7 +594,7 @@ limitations under the License.
                 edgeInfoList.push({
                   name: name,
                   node: this._getNode(name, this.graphHierarchy),
-                  edgeLabel: tf.graph.scene.edge.getLabelForEdge(metaedge,
+                  edgeLabel: tf.convert.scene.edge.getLabelForEdge(metaedge,
                       this.renderHierarchy),
                   renderInfo: this._getRenderInfo(name, this.renderHierarchy)
                 });
@@ -634,7 +634,7 @@ limitations under the License.
           this._openedControlSucc = false;
 
           this.set("_groupButtonText",
-            tf.graph.scene.node.getGroupSettingLabel(this._node));
+            tf.convert.scene.node.getGroupSettingLabel(this._node));
 
           if (this._node) {
             Polymer.dom(this.$.nodetitle).innerHTML =
@@ -655,11 +655,11 @@ limitations under the License.
         },
         _nodeIncludeStateChanged: function(include, oldInclude) {
           this.set("_auxButtonText",
-            tf.graph.getIncludeNodeButtonString(include));
+            tf.convert.getIncludeNodeButtonString(include));
         },
         _toggleGroup: function() {
           var graphElem = document.querySelector("#graph");
-          var seriesName = tf.graph.scene.node.getSeriesName(this._node);
+          var seriesName = tf.convert.scene.node.getSeriesName(this._node);
           graphElem.fire("node-toggle-seriesgroup", { name: seriesName });
         },
         _isLibraryFunction(node) {
@@ -668,10 +668,10 @@ limitations under the License.
           // extracted into the auxiliary scene group because they represent
           // templates for function call nodes, not ops in the graph themselves.
           return node &&
-                 node.name.startsWith(tf.graph.FUNCTION_LIBRARY_NODE_PREFIX);
+                 node.name.startsWith(tf.convert.FUNCTION_LIBRARY_NODE_PREFIX);
         },
         _isInSeries: function(node) {
-          return tf.graph.scene.node.canBeInSeries(node);
+          return tf.convert.scene.node.canBeInSeries(node);
         },
       });
     })();
