--- a/tensorboard/plugins/debug_db/tf_debugdb/tf-debugdb.html
+++ b/tensorboard/plugins/debug_db/tf_debugdb/tf-debugdb.html
@@ -195,7 +195,7 @@ Polymer({
       type: Boolean,
       value: true
     },
-    // A mapping between node name to the tf.graph.scene.HealthPill to render.
+    // A mapping between node name to the tf.debug.scene.HealthPill to render.
     nodeNamesToHealthPills: Object,
     // The step of health pills to show throughout the graph.
     healthPillStepIndex: Number,
@@ -237,7 +237,7 @@ Polymer({
     },
     /**
      * An optional callback that implements the
-     * tf.graph.edge.EdgeSelectionCallback signature. If provided, edges are
+     * tf.debug.edge.EdgeSelectionCallback signature. If provided, edges are
      * selectable, and this callback is run when an edge is selected.
      *
      * We initialize with the empty string value so that the observer that
@@ -283,22 +283,22 @@ Polymer({
   _statsChanged: function(stats, devicesForStats) {
     if (this.graphHierarchy) {
       if (stats && devicesForStats) {
-        tf.graph.joinStatsInfoWithGraph(this.basicGraph, stats, devicesForStats);
-        tf.graph.hierarchy.joinAndAggregateStats(this.graphHierarchy, stats);
+        tf.debug.joinStatsInfoWithGraph(this.basicGraph, stats, devicesForStats);
+        tf.debug.hierarchy.joinAndAggregateStats(this.graphHierarchy, stats);
       }
       // Recompute the rendering information.
       this._buildRenderHierarchy(this.graphHierarchy);
     }
   },
   _buildRenderHierarchy: function(graphHierarchy) {
-    tf.graph.util.time('new tf.graph.render.Hierarchy', function() {
-      if (graphHierarchy.root.type !== tf.graph.NodeType.META) {
+    tf.debug.util.time('new tf.debug.render.Hierarchy', function() {
+      if (graphHierarchy.root.type !== tf.debug.NodeType.META) {
         // root must be metanode but sometimes Polymer's dom-if has not
         // remove tf-debugdb element yet in <tf-node-info>
         // and thus mistakenly pass non-metanode to this module.
         return;
       }
-      var renderGraph = new tf.graph.render.RenderGraphInfo(
+      var renderGraph = new tf.debug.render.RenderGraphInfo(
           graphHierarchy, !!this.stats /** displayingStats */);
       renderGraph.edgeLabelFunction = this.edgeLabelFunction;
       renderGraph.edgeWidthFunction = this.edgeWidthFunction;
@@ -438,7 +438,7 @@ Polymer({
       return {
         name: name,
         node: this._getNode(name, this.graphHierarchy),
-        edgeLabel: tf.graph.scene.edge.getLabelForBaseEdge(baseEdge,
+        edgeLabel: tf.debug.scene.edge.getLabelForBaseEdge(baseEdge,
             this.renderHierarchy),
         renderInfo: this._getRenderInfo(name, this.renderHierarchy)
       };
@@ -461,7 +461,7 @@ Polymer({
         edgeInfoList.push({
           name: name,
           node: this._getNode(name, this.graphHierarchy),
-          edgeLabel: tf.graph.scene.edge.getLabelForEdge(metaedge,
+          edgeLabel: tf.debug.scene.edge.getLabelForEdge(metaedge,
               this.renderHierarchy),
           renderInfo: this._getRenderInfo(name, this.renderHierarchy)
         });
@@ -564,7 +564,7 @@ Polymer({
     // Visually mark this new edge as selected.
     if (selectedEdge) {
       this._lastSelectedEdgeGroup.classed(
-          tf.graph.scene.Class.Edge.SELECTED, true);
+          tf.debug.scene.Class.Edge.SELECTED, true);
 
       // Update the color of the marker too if the edge has one.
       this._updateMarkerOfSelectedEdge(selectedEdge);
@@ -607,7 +607,7 @@ Polymer({
     var nodeName = event.detail.name;
     var renderNode = this.renderHierarchy.getRenderNodeByName(nodeName);
     // Op nodes are not expandable.
-    if (renderNode.node.type === tf.graph.NodeType.OP) {
+    if (renderNode.node.type === tf.debug.NodeType.OP) {
       return;
     }
     this.renderHierarchy.buildSubhierarchy(nodeName);
@@ -624,14 +624,14 @@ Polymer({
     // Toggle the include setting of the specified node appropriately.
     var nodeName = event.detail.name;
     var renderNode = this.renderHierarchy.getRenderNodeByName(nodeName);
-    if (renderNode.node.include == tf.graph.InclusionType.INCLUDE) {
-      renderNode.node.include = tf.graph.InclusionType.EXCLUDE;
-    } else if (renderNode.node.include == tf.graph.InclusionType.EXCLUDE) {
-      renderNode.node.include = tf.graph.InclusionType.INCLUDE;
+    if (renderNode.node.include == tf.debug.InclusionType.INCLUDE) {
+      renderNode.node.include = tf.debug.InclusionType.EXCLUDE;
+    } else if (renderNode.node.include == tf.debug.InclusionType.EXCLUDE) {
+      renderNode.node.include = tf.debug.InclusionType.INCLUDE;
     } else {
       renderNode.node.include =
        this.renderHierarchy.isNodeAuxiliary(renderNode)
-          ? tf.graph.InclusionType.INCLUDE : tf.graph.InclusionType.EXCLUDE;
+          ? tf.debug.InclusionType.INCLUDE : tf.debug.InclusionType.EXCLUDE;
     }
 
     // Rebuild the render hierarchy.
@@ -640,27 +640,27 @@ Polymer({
   _nodeToggleSeriesGroup: function(event) {
     // Toggle the group setting of the specified node appropriately.
     var nodeName = event.detail.name;
-    tf.graph.toggleNodeSeriesGroup(this.hierarchyParams.seriesMap, nodeName);
+    tf.debug.toggleNodeSeriesGroup(this.hierarchyParams.seriesMap, nodeName);
 
     // Rebuild the render hierarchy with the updated series grouping map.
     this.set('progress', {
       value: 0,
       msg: ''
     });
-    var tracker = tf.graph.util.getTracker(this);
-    var hierarchyTracker = tf.graph.util.getSubtaskTracker(tracker, 100,
+    var tracker = tf.debug.util.getTracker(this);
+    var hierarchyTracker = tf.debug.util.getSubtaskTracker(tracker, 100,
           'Namespace hierarchy');
-    tf.graph.hierarchy.build(this.basicGraph, this.hierarchyParams, hierarchyTracker)
+    tf.debug.hierarchy.build(this.basicGraph, this.hierarchyParams, hierarchyTracker)
     .then(function(graphHierarchy) {
       this.set('graphHierarchy', graphHierarchy);
       this._buildRenderHierarchy(this.graphHierarchy);
     }.bind(this));
   },
   _deselectPreviousEdge() {
-    const selectedSelector = '.' + tf.graph.scene.Class.Edge.SELECTED;
+    const selectedSelector = '.' + tf.debug.scene.Class.Edge.SELECTED;
     // Visually mark the previously selected edge (if any) as deselected.
     d3.select(selectedSelector)
-        .classed(tf.graph.scene.Class.Edge.SELECTED, false)
+        .classed(tf.debug.scene.Class.Edge.SELECTED, false)
         .each((d, i) => {
           // Reset its marker.
           if (d.label) {
