--- a/tensorboard/plugins/debug_db/tf_debugdb_dashboard/tf-debugdb-dashboard.html
+++ b/tensorboard/plugins/debug_db/tf_debugdb_dashboard/tf-debugdb-dashboard.html
@@ -167,7 +167,7 @@ Polymer({
     _compatibilityProvider: Object,
     _hierarchyParams: {
       type: Object,
-      value: () => tf.graph.hierarchy.DefaultHierarchyParams,
+      value: () => tf.debug.hierarchy.DefaultHierarchyParams,
     },
   },
   listeners: {},
